[metadata]
name = pyDocking
author = Tuhin Mallick
author_email = tuhin.mllk@gmail.com
maintainer = Tuhin Mallick
maintainer_email = tuhin.mllk@gmail.com
version = 0.1.0
description = An Python package example for Drug Design
long_description = file: README.md, LICENSE
keywords = Drug Design
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    beautifulsoup4==4.11.1
    biopandas==0.4.1
    keras==2.11.0
    mdtraj==1.9.7
    mpi4py==3.1.4
    numpy==1.24.0
    pandas==1.5.2
    prody==2.3.1
    psikit==0.2.0
    pubchempy==1.0.4
    rdkit==2022.9.3
    requests==2.28.1
    scikit_learn==1.2.0
    scipy==1.10.0
    setuptools==58.1.0
    six==1.16.0
    tensorflow==2.11.0
    torch==1.13.1


[options.packages.find]
where=src